--- a/index.html
+++ b/index.html
@@ -1,14 +1,12 @@
 <html>
   <body>
-    <h1>Sumador</h1>
-    <form id="sumar-form">
-      <label for="primer-numero">Primer número:</label>
-      <input type="number" id="primer-numero" />
-      <label for="segundo-numero">Segundo número:</label>
-      <input type="number" id="segundo-numero" />
-      <input type="submit" value="Sumar" id="sumar-button" />
+    <h1>Calculador es Bisiesto</h1>
+    <form id="calcular-form">
+      <label>Ingrese el año :</label>
+      <input type="number" id="anio" />
+      <input type="submit" value="Calcular" id="calcular-button" />
     </form>
-    <div id="resultado-div"></div>
+
 
     <script type="module" src="./src/presenter.js"></script>
   </body>
